chore: complete slice 6
